ja_JP: Fix truncated column headers on multi-edit

--- a/ui/css/cloudstack3.ja_JP.css
+++ b/ui/css/cloudstack3.ja_JP.css
@@ -78,3 +78,6 @@ table thead th.quick-view {
   font-size: 8px;
 }
 
+.detail-view .multi-edit table tr th, .detail-view .multi-edit table tr td {
+  font-size: 8px;
+}
